import { Herramienta } from "./Herramienta";

export class BrazoRobotico extends Herramienta {
    constructor() {
        super(500);
    }
}