
export abstract class Herramienta {
    
    constructor(public peso: number) {}

}


