import { Herramienta } from "./Herramienta";

export class SensorInfrarrojo extends Herramienta {

    constructor() {
        super(250);
    }

}