import { Herramienta } from "./Herramienta";

export class Taser extends Herramienta {

    constructor() {
        super(300);
    }
    
}